Basic connection achieved (workers)

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "default": "Server=127.0.0.1;Port=3306;Database=soi_manager_db;Uid=root;Pwd=ROOT!1Gigant!@#;"
+  }
 }
