--- a/MSOI.csproj
+++ b/MSOI.csproj
@@ -12,6 +12,13 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CodeBeam.MudBlazor.Extensions" Version="8.0.0" />
+    <PackageReference Include="MudBlazor" Version="8.3.0" />
+    <PackageReference Include="MudBlazor.FontIcons.MaterialIcons" Version="1.2.0" />
   </ItemGroup>
 
 </Project>
