--- a/MSOI.csproj
+++ b/MSOI.csproj
@@ -21,4 +21,10 @@
     <PackageReference Include="MudBlazor.FontIcons.MaterialIcons" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Components\Pages\TableWorker.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
