--- a/MSOI.csproj
+++ b/MSOI.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Components\Dialogs\CreateWorkerDialog.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
     <Content Update="Components\Pages\TableWorker.razor">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
